gitops/hybrid/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-crud
  template:
    metadata:
      labels:
        app: php-crud
        deployment: php-crud
    spec:
      containers:
        - name: php-crud
          image: 'image-registry.openshift-image-registry.svc:5000/dev/php-crud:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: php-crud
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: php-crud
    deployment: php-crud
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: php-crud
spec:
  to:
    kind: Service
    name: php-crud
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
